--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -4,3 +4,8 @@
 "Error.unknown" = "Произошла неизвестная ошибка";
 "Error.repeat" = "Повторить";
 "Error.title" = "Ошибка";
+"Catalog.empty" = "Нет данных для отображения";
+"Sort.title" = "Сортировка";
+"Sort.byName" = "По названиию";
+"Sort.byCount" = "По количеству NFT";
+"Sort.close" = "Закрыть";
