Collection view layout

--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -9,3 +9,4 @@
 "Sort.byName" = "По названиию";
 "Sort.byCount" = "По количеству NFT";
 "Sort.close" = "Закрыть";
+"Collection.author" = "Автор коллекции:";
