--- a/FakeNFT/Resources/ru.lproj/Localizable.strings
+++ b/FakeNFT/Resources/ru.lproj/Localizable.strings
@@ -10,3 +10,6 @@
 "Sort.byCount" = "По количеству NFT";
 "Sort.close" = "Закрыть";
 "Collection.author" = "Автор коллекции:";
+"Details.price" = "Цена";
+"Details.addToCart" = "Добавить в корзину";
+"Details.removeFromCart" = "Удалить из корзины";
