FInalize details view

--- a/FakeNFT/Resources/en.lproj/Localizable.strings
+++ b/FakeNFT/Resources/en.lproj/Localizable.strings
@@ -13,3 +13,4 @@
 "Details.price" = "Price";
 "Details.addToCart" = "Add to cart";
 "Details.removeFromCart" = "Remove from cart";
+"Details.sellerPage" = "Seller page";
