--- a/FakeNFT/Resources/ru.lproj/Localizable.strings
+++ b/FakeNFT/Resources/ru.lproj/Localizable.strings
@@ -13,3 +13,4 @@
 "Details.price" = "Цена";
 "Details.addToCart" = "Добавить в корзину";
 "Details.removeFromCart" = "Удалить из корзины";
+"Details.sellerPage" = "Перейти на сайт продавца";
