--- a/FakeNFT/Resources/Localizable.strings
+++ b/FakeNFT/Resources/Localizable.strings
@@ -4,6 +4,7 @@
 "Error.unknown" = "Произошла неизвестная ошибка";
 "Error.repeat" = "Повторить";
 "Error.title" = "Ошибка";
+"Error.loading_false" = "Увы...";
 "Tab.profile" = "Профиль";
 "Profile.myNTF" = "Мои NTF";
 "Profile.favoritesNTF" = "Избранные NTF";
