refactoring to prepare to merge to developer

--- a/FakeNFT/Resources/en.lproj/Localizable.strings
+++ b/FakeNFT/Resources/en.lproj/Localizable.strings
@@ -15,3 +15,33 @@
 "Details.addToCart" = "Add to cart";
 "Details.removeFromCart" = "Remove from cart";
 "Details.sellerPage" = "Seller page";
+"Error.loading_false" = "Oops...";
+"Tab.profile" = "Profile";
+"Profile.myNTF" = "My NTF";
+"Profile.favoritesNTF" = "Favorites NTF";
+"Profile.aboutDeveloper" = "About developer";
+"Profile.Name" = "Name";
+"Profile.Description" = "Description";
+"Profile.Link" = "Website";
+"Profile.ChangePhoto" = "Change\nphoto";
+"Profile.Edit.UserName.Placeholder" = "Enter a name";
+"Profile.Edit.UserDescription.Placeholder" = "Enter a description";
+"Profile.Edit.UserLink.Placeholder" = "Enter a website";
+"Camera" = "Camera";
+"Photo Library" = "Library";
+"Photo Link" = "Photo link";
+"Profile.Edit.EnterAvatarLink" = "Enter a link";
+"ok" = "OK";
+"Cancel" = "Cancel";
+"Delete" = "Delete";
+"From" = "from";
+"Price" = "Price";
+"Not available" = "Not available";
+"Will avaible in the next release" = "Will be avaible\nin the next release";
+"Sorting" = "Sorting";
+"Sorting.byPrice" = "By price";
+"Sorting.byRating" = "By rating";
+"Sorting.byTitle" = "By title";
+"Profile.NTFs.Placeholder" = "You have no NFT yet";
+"Profile.FavoritesNTFs.Placeholder" = "You have no favorites NFT yet";
+
